content/resources/css/popup-links.css
@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {

.ft-popup-span {
	position: relative;
	display:inline;
}

/* fix for vanishing links in rtl tables (working without now and cause problems with htev+match comments in matcheslist)
html[dir="rtl"] td .ft-popup-span {
	display:block;
}*/

html[data-theme="standard"] ul.ft-popup-list {
	font-size: 11px;
	display: none;
	position: absolute;
	background-color: #ffffff;
	border: solid 2px #267f30;
	padding: 0px;
	z-index: 10002;
	list-style-type: none;
	margin:0px;
	padding: 3px 2px 3px 2px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}
html[data-theme="simple"] ul.ft-popup-list {
	font-size: 11px;
	display: none;
	position: absolute;
	background-color: #ffffff;
	border: solid 2px #267f30;
	padding: 0px;
	z-index: 10002;
	list-style-type: none;
	margin:0px;
	padding: 3px 2px 3px 2px;
}

html[dir="ltr"] ul.ft-popup-list {
	left:10px;
}
html[dir="rtl"] ul.ft-popup-list {
	right:10px;
}

/* just not in messages*/
.message ul.ft-popup-list {
	visibility:hidden;
}

ul.ft-popup-list-up {
	bottom:12px; /* = text height */
}

ul.ft-popup-list-down {
	top:12px; /* = line height */
}

.ft-popup-span:hover ul.ft-popup-list {
	display: block !important;
}
ul.ft-popup-list > li {
	white-space: nowrap;
	height: 20px;
	line-height: 20px !important;
	padding: 0px 2px !important;
	margin: 0px;
}

ul.ft-popup-list > li > a, ul.ft-popup-list > li > span {
	cursor: pointer;
	display: block !important;
	font-weight: normal !important;
	text-decoration: underline !important;
	color: #3f7137 !important;
	padding: 0 !important;
}

html[dir="ltr"] ul.ft-popup-list > li > a, html[dir="ltr"] ul.ft-popup-list > li > span {
	text-align: left;
}

html[dir="rtl"] ul.ft-popup-list > li > a, html[dir="rtl"] ul.ft-popup-list > li > span {
	text-align: right;
}

ul.ft-popup-list > li:hover {
	background-color: #c3e7c7 !important;
}

#ticker div ul.ft-popup-list, div.message span.ft-popup-span:hover ul.ft-popup-list, div.signature-trunc span.ft-popup-span:hover ul.ft-popup-list {
	display: none;
}

div.cfMessage, div.edited, div.cfHeader, div.feedItem, div.cfUserInfo, div.signature, div.playerInfo, .alert {
	overflow: visible !important;
}

.HTMLToolbar  .alert {
	overflow: hidden !important;
}

div.message {
	overflow:auto;
}

}

